Finished added Home and Death Chest

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,3 +10,9 @@ commands:
   vanish:
     description: "Vanish"
     permission: epsi.vanish
+  sethome:
+    description: "SetHome"
+  home:
+    description: "Home"
+  spawn:
+    description: "Spawn"
