Fixed config override

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -16,3 +16,6 @@ commands:
     description: "Home"
   spawn:
     description: "Spawn"
+  epsi:
+    description: "Epsi"
+    permission: epsi.epsi
