--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,9 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+          cache: 'maven'
       - name: Build with Maven
-        run: mvn clean package
+        run: mvn package
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
