--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_REPOSITORY: TheJordanDev/Epsi-BDE-Plugin
+      TAG_NAME: ${{github.head_ref}}
     steps:
       - uses: actions/checkout@v2
+      - name: "🏷️ Push tag"
+        uses: EndBug/latest-tag@latest
+        with:
+          tag-name: ${{env.TAG_NAME}}
       - name: Set up Java
         uses: actions/setup-java@v2
         with:
@@ -22,5 +29,4 @@ jobs:
         with: 
           files: ./target/Epsi-1.0-SNAPSHOT.jar
           token: ${{ secrets.RELEASE_TOKEN }}
-        env:
-          GITHUB_REPOSITORY: TheJordanDev/Epsi-BDE-Plugin
+          tag_name: ${{env.TAG_NAME}}
