--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_REPOSITORY: TheJordanDev/Epsi-BDE-Plugin
-      TAG_NAME: latest
     steps:
       - uses: actions/checkout@v2
       - name: Set up Java
@@ -19,6 +18,14 @@ jobs:
           cache: 'maven'
       - name: Build with Maven
         run: mvn package
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+      - name: Tag snapshot
+        uses: tvdias/github-tagger@v0.0.1
+        with:
+          repo-token: ${{ secrets.RELEASE_TOKEN }}
+          tag: ${{ steps.date.outputs.date }}
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
