--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,10 @@ jobs:
         run: mvn package
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+        run: echo "::set-output name=date::$(date +'%D')"
+      - name: Get current time
+        id: time
+        run: echo "::set-output name=time::$(date +'%T')"
       - name: Tag snapshot
         uses: tvdias/github-tagger@v0.0.1
         with:
@@ -32,4 +35,5 @@ jobs:
         with: 
           files: ./target/Epsi-1.0-SNAPSHOT.jar
           token: ${{ secrets.RELEASE_TOKEN }}
-          tag_name: ${{env.TAG_NAME}}
+          name: ${{ steps.time.outputs.time }}
+          tag: ${{ steps.date.outputs.date }}
