--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
         run: mvn package
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%d/%m/%Y')"
+        run: echo "::set-output name=date::$(TZ='France/Paris' date +'%d/%m/%Y')"
       - name: Get current time
         id: time
-        run: echo "::set-output name=time::$(date +'%T')"
+        run: echo "::set-output name=time::$(TZ='France/Paris' date +'%T')"
       - name: Tag snapshot
         uses: tvdias/github-tagger@v0.0.1
         with:
