--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,12 +18,9 @@ jobs:
           cache: 'maven'
       - name: Build with Maven
         run: mvn package
-      - name: Get current date
-        id: date
-        run: echo "::set-output name=date::$(TZ='France/Paris' date +'%d/%m/%Y')"
       - name: Get current time
         id: time
-        run: echo "::set-output name=time::$(TZ='France/Paris' date +'%T')"
+        run: echo "::set-output name=time::$(TZ='France/Paris' date +'%d-%m-%Y %T')"
       - name: Tag snapshot
         uses: tvdias/github-tagger@v0.0.1
         with:
@@ -35,5 +32,5 @@ jobs:
         with: 
           files: ./target/Epsi-1.0-SNAPSHOT.jar
           token: ${{ secrets.RELEASE_TOKEN }}
-          tag_name: ${{ steps.date.outputs.date }}
+          tag_name: 'release'
           name: ${{ steps.time.outputs.time }}
